--- a/helm/azure/templates/deployment.facilities.yml
+++ b/helm/azure/templates/deployment.facilities.yml
@@ -18,15 +18,20 @@ spec:
     spec:
       containers:
       - name: {{ .Values.facilities.name }}
-        image: {{ .Values.facilities.name }}:1.5
+        image: {{ .Values.registry }}/{{ .Values.facilities.image.name }}:{{ .Values.facilities.image.tag }}
         env:
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: basic-auth
+              key: databasePassword
         - name: ASPNETCORE_ENVIRONMENT
           value: {{ .Values.environment }}
         - name: ConnectionStrings__DagAir.Facilities
-          value: "server={{ .Values.database.server }};database={{ .Values.facilities.database.schema }};user={{ .Values.database.user }};password={{ .Values.database.password }};SslMode=Required;SslCa=DigiCertGlobalRootCA.crt.pem"
+          value: "server={{ .Values.database.server }};database={{ .Values.facilities.database.schema }};user={{ .Values.database.user }};password=$(DATABASE_PASSWORD);SslMode=Required;SslCa=DigiCertGlobalRootCA.crt.pem"
         - name: basePath
           value: "/addresses"
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
 ---
