--- a/helm/azure/templates/deployment.notification-producer.yml
+++ b/helm/azure/templates/deployment.notification-producer.yml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
       - name: notification-producer-container
-        imagePullPolicy: Never
-        image: realtime/notification-producer:1.5
+        imagePullPolicy: Always
+        image: {{ .Values.registry }}/realtime/notification-producer:develop-latest
         resources:
           requests:
             cpu: 100m
