--- a/helm/azure/templates/deployment.redis.yml
+++ b/helm/azure/templates/deployment.redis.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: master
-        image: redis:1.5
+        image: redis
         resources:
           requests:
             cpu: 100m
