--- a/helm/azure/templates/rabbitmq-cluster-helm.yml
+++ b/helm/azure/templates/rabbitmq-cluster-helm.yml
@@ -110,9 +110,6 @@ spec:
     - name: http-stats
       port: 15672
       targetPort: stats
-    - name: mqtt
-      port: 1883
-      targetPort: mqtt
   selector:
     app.kubernetes.io/name: rabbitmq
     app.kubernetes.io/instance: rabbitmq-release
@@ -147,10 +144,6 @@ spec:
     - name: http-stats
       port: 15672
       targetPort: stats
-      nodePort: null
-    - name: http-mqtt
-      port: 1883
-      targetPort: mqtt
       nodePort: null
   selector:
     app.kubernetes.io/name: rabbitmq
@@ -252,19 +245,19 @@ spec:
             - name: RABBITMQ_ERL_COOKIE
               valueFrom:
                 secretKeyRef:
-                  name: basic-auth
-                  key: erlangCookie
+                  name: rabbitmq-release-rabbitmq
+                  key: rabbitmq-erlang-cookie
             - name: RABBITMQ_LOAD_DEFINITIONS
               value: "no"
             - name: RABBITMQ_SECURE_PASSWORD
               value: "yes"
             - name: RABBITMQ_USERNAME
-              value: "{{ .Values.rabbitMq.userName }}"
+              value: "dagairUser"
             - name: RABBITMQ_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: basic-auth
-                  key: databasePassword
+                  name: rabbitmq-release-rabbitmq
+                  key: rabbitmq-password
             - name: RABBITMQ_PLUGINS
               value: "rabbitmq_management, rabbitmq_peer_discovery_k8s, rabbitmq_auth_backend_ldap"
           ports:
@@ -276,8 +269,6 @@ spec:
               containerPort: 15672
             - name: epmd
               containerPort: 4369
-            - name: mqtt
-              containerPort: 1883
           livenessProbe:
             exec:
               command:
