DAGAIR-45 Adjust code infrastructure to new measurement model

--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Docker.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Docker.json
@@ -10,7 +10,7 @@
     },
     "sensorRabbitMq": {
         "hostName": "rabbitmq",
-        "virtualHost": "dagair",
+        "virtualHost": "/",
         "userName": "guest",
         "password": "guest",
         "protocol": "rabbitmq://",
