--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
@@ -22,7 +22,7 @@
     },
     "sensorRabbitMq": {
         "hostName": "localhost",
-        "virtualHost": "dagair",
+        "virtualHost": "/",
         "userName": "guest",
         "password": "guest",
         "protocol": "rabbitmq://",
