--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Kubernetes.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Kubernetes.json
@@ -10,7 +10,7 @@
     },
     "sensorRabbitMq": {
         "hostName": "rabbitmq",
-        "virtualHost": "dagair",
+        "virtualHost": "/",
         "userName": "guest",
         "password": "guest",
         "protocol": "rabbitmq://",
