DAGAIR-49 Save measurements to influx using SensorStateHistory service

--- a/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory/appsettings.json
+++ b/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory/appsettings.json
@@ -11,6 +11,13 @@
       "Path": "C:/DagAir_Logs/DagAir_Sensor_State_History_logs.txt"
     }
   },
+  "rabbitMq":
+  {
+    "hostName": "localhost",
+    "virtualHost": "dagair",
+    "protocol": "rabbitmq://",
+    "connectionName": "sensor-state-history-node"
+  },
   "DagAirInfluxConfiguration": {
     "token": "local_token1",
     "org": "local_org1",
