--- a/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Contracts/DagAir.DataServices.SensorStateHistory.Contracts.csproj
+++ b/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Contracts/DagAir.DataServices.SensorStateHistory.Contracts.csproj
@@ -8,4 +8,8 @@
       <PackageReference Include="NodaTime" Version="3.0.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
