--- a/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Data/DagAir.DataServices.SensorStateHistory.Data.csproj
+++ b/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Data/DagAir.DataServices.SensorStateHistory.Data.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\DagAir_Components\DagAir.Components.Influx\DagAir.Components.Influx.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Influx\DagAir.Components.Influx.csproj" />
     </ItemGroup>
 
 </Project>
