--- a/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory/DagAir.DataServices.SensorStateHistory.csproj
+++ b/src/DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory/DagAir.DataServices.SensorStateHistory.csproj
@@ -14,8 +14,8 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\..\DagAir.DataServices.SensorStateHistory.Data\DagAir.DataServices.SensorStateHistory.Data.csproj" />
-      <ProjectReference Include="..\..\DagAir.DataServices.SensorStateHistory.Infrastructure\DagAir.DataServices.SensorStateHistory.Infrastructure.csproj" />
+      <ProjectReference Include="..\DagAir.DataServices.SensorStateHistory.Data\DagAir.DataServices.SensorStateHistory.Data.csproj" />
+      <ProjectReference Include="..\DagAir.DataServices.SensorStateHistory.Infrastructure\DagAir.DataServices.SensorStateHistory.Infrastructure.csproj" />
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Influx\DagAir.Components.Influx.csproj" />
       <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
       <ProjectReference Include="..\DagAir.DataServices.SensorStateHistory.Contracts\DagAir.DataServices.SensorStateHistory.Contracts.csproj" />
