--- a/src/DagAir_PolicyNode/Dockerfile
+++ b/src/DagAir_PolicyNode/Dockerfile
@@ -11,7 +11,7 @@ COPY ["./DagAir_PolicyNode/DagAir.PolicyNode.Infrastructure/", "./DagAir_PolicyN
 COPY ["./DagAir_IngestionNode/DagAir.IngestionNode.Contracts/", "./DagAir_IngestionNode/DagAir.IngestionNode.Contracts/"]
 COPY ["./DagAir_Policies/DagAir.Policies.Contracts/", "./DagAir_Policies/DagAir.Policies.Contracts/"]
 COPY ["./DagAir_Sensors/DagAir.Sensors.Contracts/", "./DagAir_Sensors/DagAir.Sensors.Contracts/"]
-COPY ["./DagAir.DataServices.SensorStateHistory.Contracts/", "./DagAir.DataServices.SensorStateHistory.Contracts/"]
+COPY ["./DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Contracts/", "./DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Contracts/"]
 COPY ["./DagAir_Facilities/DagAir.Facilities.Contracts/", "./DagAir_Facilities/DagAir.Facilities.Contracts/"]
 COPY ["./DagAir_Components/DagAir.Components.MassTransit.RabbitMq/", "./DagAir_Components/DagAir.Components.MassTransit.RabbitMq/"]
 COPY ["./DagAir_Components/DagAir.Components.Healthchecks/", "./DagAir_Components/DagAir.Components.Healthchecks/"]
