--- a/src/DagAir_WebApplications/WebAdminApp1/appsettings.Docker.json
+++ b/src/DagAir_WebApplications/WebAdminApp1/appsettings.Docker.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=host.docker.internal;database=DagAir.Identity;user=root;password=Rolka7Sushi"
+    "DefaultConnection": "server=host.docker.internal;database=DagAir.Identity;user=root;password="
   },
   "serviceUrls": {
     "DagAir.AdminNode": "http://admin_node/"
