DAGAIR-52 Add helm templates for kubernetes deployment

--- a/src/DagAir_Facilities/DagAir.Facilities/appsettings.Kubernetes.json
+++ b/src/DagAir_Facilities/DagAir.Facilities/appsettings.Kubernetes.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
         "DagAir.Facilities": "server=host.docker.internal;database=DagAir.Facilities;user=root;password="
-    }
+    },
+    "basePath": "/facilities"
 }
