--- a/src/DagAir_Policies/DagAir.Policies/appsettings.Kubernetes.json
+++ b/src/DagAir_Policies/DagAir.Policies/appsettings.Kubernetes.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
         "DagAir.Policies": "server=host.docker.internal;database=DagAir.Policies;user=root;password="
-    }
+    },
+    "basePath": "/policies"
 }
