--- a/src/DagAir_Sensors/DagAir.Sensors/appsettings.Kubernetes.json
+++ b/src/DagAir_Sensors/DagAir.Sensors/appsettings.Kubernetes.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
         "DagAir.Sensors": "server=host.docker.internal;database=DagAir.Sensors;user=root;password="
-    }
+    },
+    "basePath": "/sensors"
 }
