DAGAIR-55 Add button to retrieve current measurement

--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
@@ -26,6 +26,7 @@
     "DagAir.Addresses": "http://localhost:10000/",
     "DagAir.SensorStateHistory": "http://localhost:22000/",
     "DagAir.SensorsDataService": "http://localhost:9002/",
-    "DagAir.PoliciesDataService": "http://localhost:12000/"
+    "DagAir.PoliciesDataService": "http://localhost:12000/",
+    "DagAir.SensorState": "http://localhost:25000/"
   }
 }
