--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/DagAir.IngestionNode.csproj
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/DagAir.IngestionNode.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DagAir.DataServices.SensorState.Contracts\DagAir.DataServices.SensorState.Contracts.csproj" />
     <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
     <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.HttpClients\DagAir.Components.HttpClients.csproj" />
     <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
