DAGAIR-56 Restructure project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,17 @@ services:
     networks:
       - dagair_network
 
+  subscriber:
+    build:
+      target: final
+      context: ./iot/publish_subscribe
+      dockerfile: Dockerfile
+    ports:
+      - "8098:80"
+    networks:
+      - dagair_network
+    restart: always
+
   sensors_api:
     build:
       target: final
@@ -107,6 +118,19 @@ services:
       - ASPNETCORE_ENVIRONMENT=Docker
     ports:
       - "8095:80"
+    networks:
+      - dagair_network
+    restart: always
+
+  sensor_state_api:
+    build:
+      target: final
+      context: ./src
+      dockerfile: ./DagAir_SensorState/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+    ports:
+      - "8097:80"
     networks:
       - dagair_network
     restart: always
