--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Kubernetes.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Kubernetes.json
@@ -11,6 +11,10 @@
     "serviceUrls": {
         "webAdminApp": "http://web-admin-app:8085/",
         "DagAir.Facilities": "http://facilities-api:8087/",
-        "DagAir.Addresses": "http://addresses-api:8094/"
+        "DagAir.Addresses": "http://addresses-api:8094/",
+        "DagAir.SensorStateHistory": "http://sensor-state-history-api:8095/",
+        "DagAir.SensorsDataService": "http://sensors-api:8080/",
+        "DagAir.PoliciesDataService": "http://policies-api:8081/",
+        "DagAir.SensorState": "http://sensor-state-api:8097/"
     }
 }
