--- a/src/DagAir_ClientNode/Dockerfile
+++ b/src/DagAir_ClientNode/Dockerfile
@@ -8,6 +8,9 @@ WORKDIR /app
 COPY ["./DagAir_ClientNode/DagAir.ClientNode/", "./DagAir_ClientNode/DagAir.ClientNode/"]
 COPY ["./DagAir_ClientNode/DagAir.ClientNode.Infrastructure/", "./DagAir_ClientNode/DagAir.ClientNode.Infrastructure/"]
 COPY ["./DagAir_PolicyNode/DagAir.PolicyNode.Contracts/", "./DagAir_PolicyNode/DagAir.PolicyNode.Contracts/"]
+COPY ["./DagAir_Policies/DagAir.Policies.Contracts/", "./DagAir_Policies/DagAir.Policies.Contracts/"]
+COPY ["./DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Contracts/", "./DagAir_SensorStateHistory/DagAir.DataServices.SensorStateHistory.Contracts/"]
+COPY ["./DagAir_IngestionNode/DagAir.IngestionNode.Contracts/", "./DagAir_IngestionNode/DagAir.IngestionNode.Contracts/"]
 COPY ["./DagAir_Components/DagAir.Components.MassTransit.RabbitMq/", "./DagAir_Components/DagAir.Components.MassTransit.RabbitMq/"]
 COPY ["./DagAir_Components/DagAir.Components.Healthchecks/", "./DagAir_Components/DagAir.Components.Healthchecks/"]
 COPY ["./DagAir_Components/DagAir.Components.Logging/", "./DagAir_Components/DagAir.Components.Logging/"]
