--- a/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.Docker.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.Docker.json
@@ -7,7 +7,8 @@
         "connectionName": "policy-node"
     },
     "serviceUrls": {
-        "DagAir.Policies": "http://dagair_policies_api_1:80/",
-        "DagAir.Facilities": "http://dagair_facilities_api_1:80/"
+        "DagAir.Policies": "http://policies_api/",
+        "DagAir.Facilities": "http://facilities_api/",
+        "DagAir.Sensors": "http://sensors_api/"
     }
 }
