--- a/src/DagAir_SensorState/DagAir.DataServices.SensorState/appsettings.Kubernetes.json
+++ b/src/DagAir_SensorState/DagAir.DataServices.SensorState/appsettings.Kubernetes.json
@@ -1,4 +1,13 @@
 {
+    "rabbitMq":
+    {
+        "hostName": "rabbitmq",
+        "virtualHost": "dagair",
+        "userName": "guest",
+        "password": "guest",
+        "protocol": "rabbitmq://",
+        "connectionName": "ingestion-node"
+    },
     "sensorRabbitMq": {
         "hostName": "rabbitmq",
         "virtualHost": "/",
