--- a/src/DagAir_SensorState/DagAir.DataServices.SensorState.Infrastructure/DagAir.DataServices.SensorState.Infrastructure.csproj
+++ b/src/DagAir_SensorState/DagAir.DataServices.SensorState.Infrastructure/DagAir.DataServices.SensorState.Infrastructure.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir_IngestionNode\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
     </ItemGroup>
 
 </Project>
