DAGAIR-56 Fix github workflow

--- a/.github/workflows/continuous-delivery.ingestion-node.yml
+++ b/.github/workflows/continuous-delivery.ingestion-node.yml
@@ -79,4 +79,5 @@ jobs:
 
     - name: Docker push images
       run: |
+        DOCKER_BUILDKIT=1 \
         docker push ${{ env.APP_IMAGE_NAME }} --all-tags
