--- a/helm/dagair/templates/deployment.admin-node.yml
+++ b/helm/dagair/templates/deployment.admin-node.yml
@@ -34,7 +34,7 @@ spec:
           value: "http://{{ .Values.sensors.name }}:{{ .Values.sensors.port }}/"
         - name: serviceUrls__DagAir.PoliciesDataService
           value: "http://{{ .Values.policies.name }}:{{ .Values.policies.port }}/"
-        - name: serviceUrls__DagAir.PoliciesDataService
+        - name: serviceUrls__DagAir.SensorState
           value: "http://{{ .Values.sensorState.name }}:{{ .Values.sensorState.port }}/"
         - name: rabbitMq__hostName
           value: {{ .Values.rabbitMq.hostName }}
