DAGAIR-58 Add subscriber github workflow

--- a/iot/publish_subscribe/Dockerfile
+++ b/iot/publish_subscribe/Dockerfile
@@ -16,4 +16,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 
-ENTRYPOINT ["dotnet", "Subscriber.dll", "host.docker.internal"]
+ENTRYPOINT ["dotnet", "Subscriber.dll"]
